src/test/resources/semantic/sentences/error/TC_ERROR_WHILE.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 13 | COLUMNA 13 | El tipo de la condicion while no es booleano |
struct A{
    Int a;
}

impl A{
    .(){}
    fn m1(Int c)->void{
        Str string;
        while (c>1){
            while(100){
                a=1;
            }
        }
    }
}

start{
}
